--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "csvtomysql",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "csv file update and insert into mysql",
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch src --delay 1 --exec ts-node src/index.ts",
     "exec": "'ts-node' src/index.ts",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config config/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MadfishDT/csvtomysql.git"
@@ -31,10 +32,8 @@
   },
   "dependencies": {
     "csv-parser": "^2.3.3",
-    "figlet": "^1.5.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
-    "readline": "^1.3.0",
     "source-map-support": "^0.5.19"
   }
 }
